[project]
name = "jarvis-market-data"
version = "0.1.0"
description = "CLI tool for fetching market data for JARVIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "alpaca-py>=0.20.0",
    "typer>=0.9.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
jarvis-price = "market_data.cli_v2:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
